# KapiBara_ROS2_Gazebo

./: .gitignore  Dockerfile  compose.yml  entrypoint.sh  last_error.txt  run.sh
.devcontainer/: devcontainer.json  docker-compose.yml
Docker/: Dockerfile  build_packages.sh  create_package.sh  create_workspace.sh  entrypoint.sh  install_package.sh  packages.txt
commands/: run_cmd.sh
control/: Dockerfile
control/commands/: build_packages.sh  create_package.sh
control/dependencies/: packages.txt  python.txt
control/src/launch/: launch.py
control/src/worlds/: playground1
dependencies/: packages.txt
gazebo/: Dockerfile  Dockerfile.prod  entrypoint.sh  entrypoint1.sh  entrypoint2.sh
gazebo/commands/: build_package.sh  build_packages.sh  create_workspace.sh
gazebo/dependencies/: packages.txt  python.txt  rosdep_package.list  rosdep_package1.yaml
gazebo/mains/: main.py  main1.py  main2.py  main3.py
gazebo/models/: dqn_q_base  dqn_q_head  esp_base  esp_base_0  esp_base_1  esp_base_2  esp_base_3  esp_base_4  esp_base_5  esp_base_6  esp_base_7  esp_base_8  esp_base_9  esp_head  esp_head_0  esp_head_1  esp_head_2  esp_head_3  esp_head_4  esp_head_5  esp_head_6  esp_head_7  esp_head_8  esp_head_9  genetic_base_0  genetic_base_1  genetic_base_2  genetic_base_3  genetic_base_4  genetic_base_5  genetic_base_6  genetic_base_7  genetic_base_8  genetic_base_9  genetic_head_0  genetic_head_1  genetic_head_2  genetic_head_3  genetic_head_4  genetic_head_5  (+10 more)
gazebo/src/: Robal.code-workspace  cycloneddns.xml  dqn_simple_maze.csv
gazebo/src/launch/: launch.py  launch1.py  launch3.py
gazebo/src/models/: dqn_q_base  dqn_q_head  esp_head  esp_head_0  esp_head_1  esp_head_2  esp_head_3  esp_head_4  esp_head_5  esp_head_6  esp_head_7  esp_head_8  esp_head_9  genetic_head  genetic_head_0  genetic_head_1  genetic_head_2  genetic_head_3  genetic_head_4  genetic_head_5  genetic_head_6  genetic_head_7  genetic_head_8  genetic_head_9  target_dqn_q_base  target_dqn_q_head
gazebo/src/rviz/: Collect_Maze  Maze_Collect  kapibara.rviz  kapibara1.rviz  playground.sdf  playground1  test  test1
gazebo/src/workspace/src/gym/: CMakeLists.txt  main.py  main1.py  main3.py  package.xml
gazebo/src/workspace/src/gym/config/: my_controllers.yaml
gazebo/src/workspace/src/gym/description/: landmine.urdf.xacro  lasers_def.xacro  mouse.urdf.xacro
gazebo/src/workspace/src/gym/gym/: README  __init__.py
gazebo/src/workspace/src/gym/gym/agents/: step_agnet.py
gazebo/src/workspace/src/gym/gym/environments/: catch.py  collect.py  follow.py  labirynth.py  parking.py
gazebo/src/workspace/src/gym/gym/utils/: utils_launch.py  utils_sim.py
gazebo/src/workspace/src/gym/launch/: launch.collect.one.py  launch.collect.spawn.blocks.py  launch.follow.one.py  launch.labirynth.big.py  launch.labirynth.py  launch.mouse.trap.one.py  launch.parking.one.py  launch.test.py  spawn.mouse.py  spawn.robot.py  start.gym.py
gazebo/src/workspace/src/gym/props/Parking_1/: model.config  model.sdf
gazebo/src/workspace/src/gym/props/Predator1/: model.config
gazebo/src/workspace/src/gym/props/Simple_Maze/: model.sdf
gazebo/src/workspace/src/gym/worlds/: world.sdf
gazebo/src/workspace/src/kapibara/: CMakeLists.txt  package.xml
gazebo/src/workspace/src/kapibara/config/: my_controllers.yaml  my_controllers_sim.yaml
gazebo/src/workspace/src/kapibara/description/: camera.xacro  imu.xacro  kapibara.urdf.xacro  landmine.urdf.xacro  lasers_def.xacro  lasers_joints.xacro  robot_core.xacro  ros2_control.xacro
gazebo/src/workspace/src/kapibara/include/kapibara/: fusion.hpp
gazebo/src/workspace/src/kapibara/kapibara/: DeviceExceptions.py  DeviceManager.py  config.py  initialize.py
gazebo/src/workspace/src/kapibara/kapibara/devices/: Device.py  DistanceSensor.py  Ears.py  Gyroscope.py  Servos.py  __init__.py
gazebo/src/workspace/src/kapibara/kapibara/libs/: VL53L0X.py
gazebo/src/workspace/src/kapibara/kapibara/libs/mpu6050/: mpu6050.py
gazebo/src/workspace/src/kapibara/kapibara/scripts/: fusion.py
gazebo/src/workspace/src/kapibara/launch/: launch.gazebo.py  launch.kapibara control.py  launch.kapibara.control.py  launch.kapibara.rviz.py  launch.sim..py  launch.sim.py
gazebo/src/workspace/src/kapibara/scripts/: imu_calib.py  mic_emulator.py  sensor_broadcaster.py
gazebo/src/workspace/src/kapibara/src/: fusion.cpp
robot/src/launch/: launch.py
src/launch/: launch.py
src/rviz/: kapibara.rviz
(+473 files in other folders)
