<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kapibara</name>
  <version>0.8.0</version>
  <author>Patryk Peroński</author>
  <description>A package used for control and maintance of KapiBara robots.</description>
  <license>TODO: License declaration</license>
  <maintainer email="root@root.com">root</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>kapibara_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <depend>python3-numpy</depend>
  <depend>python3-pyaudio</depend>

  <depend>gazebo_ros_pkgs</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>imu_tools</depend>
  <depend>ros2_controllers</depend>
  <depend>controller_manager</depend>
  <depend>rqt_controller_manager</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <build_depend>xacro</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.." />
  </export>
</package>
